--- a/src/components/AboutSection3.module.css
+++ b/src/components/AboutSection3.module.css
@@ -8,6 +8,7 @@
   width: 89.5833vw;
   flex-direction: column;
   padding: var(--padding-0) var(--padding-20) 4.2188vw var(--padding-0);
+  margin-top: 3vw;
   box-sizing: border-box;
   gap: var(--gap-20);
   text-align: left;
@@ -31,7 +32,7 @@
 .frameChild {
   width: 43.75vw;
   height: var(--height-1);
-  border-top: 2px solid var(--Grey-Dark);
+  border-top: 1px solid var(--Grey-Dark);
   opacity: var(--opacity-0_5);
 }
 .frameWrapper {
@@ -82,7 +83,7 @@
   margin: 0;
   width: 12.6563vw;
   font-size: var(--fs-128);
-  letter-spacing: normal;
+  letter-spacing: 0.05em;
   line-height: 90%;
   text-transform: uppercase;
   font-weight: 800;
@@ -121,7 +122,7 @@
   margin: 0;
   width: 8.3854vw;
   font-size: inherit;
-  letter-spacing: normal;
+  letter-spacing: 0.05em;
   line-height: 90%;
   text-transform: uppercase;
   font-weight: 800;
